Fix project tab overflow

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -217,6 +217,7 @@ button:hover{
 .row {
     display: flex;
     flex-wrap: wrap;
+    width: 90vw;
     gap: 25px;
     justify-content: center;
 }
